--- a/index.html
+++ b/index.html
@@ -4,16 +4,12 @@
 	<script src="${pluginsBaseRootUrl}/web.shared/jquery.js" type="text/javascript"></script>
 	<script src="${pluginsBaseRootUrl}/web.shared/jquery.class.js" type="text/javascript"></script>
 	<script src="${pluginsBaseRootUrl}/web.shared/jquery.cookie.js" type="text/javascript"></script>
-	<link  href="${pluginsBaseRootUrl}/web.shared/elvis_api/css/elvis.css" rel="stylesheet" type="text/css"/>
 	<script src="${pluginsBaseRootUrl}/web.shared/elvis_api/js/jquery.elvis.js" type="text/javascript"></script>
 
 
-	<!-- Ressource -->
-	<link  href="resources/jquery-ui-1.8.16.custom.css" rel="stylesheet" type="text/css"/>
-	<script src="resources/jquery-ui-1.8.16.custom.min.js" type="text/javascript"></script>
-	<script src="resources/jquery.iframe-transport.js" type="text/javascript"></script>
-	<script src="resources/jquery.fileupload.js" type="text/javascript"></script>
-	<link  href="resources/styles.css" rel="stylesheet" type="text/css"/>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
+	<link href="${pluginsBaseRootUrl}/web.shared/elvis_api/css/elvis.css" rel="stylesheet" type="text/css"/>
 
 	<!-- UI toast -->
 	<link
@@ -33,6 +29,32 @@
 	  .tui-image-editor-container {
 	  	height: 600px !important;
 	  }
+	  .tui-image-editor-header-buttons, .tui-image-editor-header-logo {
+	  	display: none;
+	  	visibility: hidden;
+	  }
+
+	  .wrapper {
+	  	position: relative;
+	  }
+	  .save-asset {
+	  	position: absolute;
+	  	right: 8px;
+	  	top: 8px;
+	  	z-index: 9999;
+	  }
+	  .preload {
+	  	display: none;
+	  }
+	  .preload-bg {
+		  position: absolute;
+	    z-index: 9999;
+	    background: white;
+	    width: 100%;
+	    height: 100%;
+	    opacity: 0.25;
+	    display: none;
+	  }
 	</style>
 
 	<!-- Custom Code Image Editor -->
@@ -40,9 +62,6 @@
 		var elvisContext = ElvisPlugin.resolveElvisContext();
 		var elvisApi = new ElvisAPI("${serverUrl}");
 		var csrfToken = null;
-
-		// var csrfToken = window.localStorage.getItem("elvis.csrfToken");
-		// console.log('localToken', localToken);
 
 		$(document).ready(function() {
 			// 1. Get CSRF TOKEN
@@ -55,7 +74,6 @@
 		    method: 'POST',
 		    type: 'POST', // For jQuery < 1.9
 		    success: function(response){
-		      window.localStorage.setItem("elvis.csrfToken", response.csrfToken);
 		      csrfToken = response.csrfToken
 		    }
 			});
@@ -91,6 +109,11 @@
 
 	    // 3. Save Assets filtered by Image Editor.
 	    $('.save-asset').click( function() {
+
+	    	// Optional
+	    	var self = $(this);
+	    	self.attr("disabled", true);
+	    	$('.preload, .preload-bg').css('display', 'inline');
 
 	    	// 3.1 Get date asset from image editor.
       	var dataURL = imageEditor.toDataURL()
@@ -137,6 +160,11 @@
 			    method: 'POST',
 			    type: 'POST', // For jQuery < 1.9
 			    success: function(response){
+			    	
+			    	// Optional
+			    	self.attr("disabled", false);
+			    	$('.preload, .preload-bg').css('display', 'none');
+
 			      console.log('response', response);
             if (response != 0) { 
               alert('file uploaded'); 
@@ -170,14 +198,18 @@
 		});
 	</script>
 
-
 </head>
 <body>
 
-	<button class="save-asset">Save</button>
-
-	<div id="tui-image-editor-container"></div>
-
+	<div class="wrapper">
+		<button class="btn btn-light save-asset">
+			<i class="far fa-save"></i> 
+			<img class="preload" src="./loading.gif"> Save
+		</button>
+		<div class="preload-bg"></div>
+		<div id="tui-image-editor-container"></div>	
+	</div>
+	
   <script
     type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/3.3.2/fabric.js"></script>
